Migrate to PostgreSQL (#284)
* Get started on implementing mysql instead of using the REST api

* Use postresql instead & yeet custom command interface

* Install liquibase

* Add changelog file

* Fill out with full guild setting table

* Add custom commands to changelog

* Add config support for psql

* Bot can now boot from psql

* Add a few more guild setting methods

* re-use connection for same operations

* Add purging of guild settings

* Add updating of guild settings

* Load patrons

* Linter

* Aa

* When you duplicate the same entry causing you to rewrite everything

* Creating of custom commands

* Deleting custom commands

* Lint

* Updating custom commands

* Adding to and clearing the blacklist

* Finish patron system

* Creating of temp bans

* Insert warnings and mutes

* Fetching warnings

* Code for purging bans and mutes

* Ban bypasses

* Vc autorole

* Make vc autoroles work

* Tags :)

* Inserting of reminders

* Listing of reminders

* SHowing and listing reminders

* Add setting warn actions

* Change all return types to futures

* Convert postgres database engine

* Convert web database engine

* FUck sqlite

* FIx codebase

* CLeanup

* Lint code a bit more

* Rename adapter to database

* Better errors

* Don't store stuff tha's not needed

* Add timers for psql

* lint